syntax = "proto3";

package peony.auth;

import "google/protobuf/empty.proto";

service UserService {
  rpc Import(ImportRequest) returns (google.protobuf.Empty) {}
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc SignUp(SignUpRequest) returns (google.protobuf.Empty) {}
  rpc Confirm(EmailRequest) returns (google.protobuf.Empty) {}
  rpc Unlock(EmailRequest) returns (google.protobuf.Empty) {}
  rpc ForgotPassword(EmailRequest) returns (google.protobuf.Empty) {}
  rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty) {}
}

enum ContentType {
  PLAIN = 0;
  HTML = 1;
  MARKDOWN = 3;
  JSON = 4;
  XML = 5;
  PROTOBUF = 6;
}

message ImportRequest {
  string uid = 1;
  string real_name = 2;
  string nickname = 3;
  string email = 4;
}

message EmailRequest { string email = 1; }

message SignInRequest {
  string login = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
  repeated string roles = 2;
}

message SignUpRequest {
  string real_name = 1;
  string nickname = 2;
  string email = 3;
  string password = 4;
}

message ResetPasswordRequest {
  string token = 1;
  string password = 2;
}

message EmailTask {
  string to = 1;
  repeated string cc = 2;
  repeated string bcc = 3;
  string subject = 4;
  ContentType content_type = 5;
  string body = 6;
  repeated string files = 7;
}
