syntax = "proto3";

// import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/duration.proto";

service NutService {
  rpc SignIn(SignInRequest) returns(SignInResponse) {}
  rpc SignUp(SignUpRequest) returns(Ok) {}
}

message Ok {}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
  repeated string roles = 2;
}

message SignUpRequest {
  string real_name = 1;
  string nickname = 2;
  string email = 3;
  string password = 4;
}

// message SignUpResponse {
// google.protobuf.Timestamp created_at = 1;
//   google.protobuf.Duration duration = 2;
//   google.protobuf.Empty aaa = 3;
// }